<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="splash_image">Splash Screen Image</string>
    <string name="marriagenda"><b>marriAGENDA</b></string>
    <string name="app_name">marriagenda</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_button">LOGIN</string>
    <string name="register_button">Register</string>
    <string name="login_image">Image Logo</string>
    <string name="random">HELLO RANDOM</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmpw">Confirm Password</string>
    <string name="email">E-Mail</string>
    <string name="new_event">Create Event</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Date:</string>
    <string name="event_time">Time:</string>
    <string name="event_address">Address:</string>
    <string name="event_city">City:</string>
    <string name="event_state">State:</string>
    <string name="event_zip">ZIP:</string>
    <string name="event_description">Give a Brief Description</string>
    <string name="set">SET</string>
    <string name="create">CREATE</string>
    <string name="event_desc">Description:</string>
    <string name="dont_know">Don\'t Know</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="attending">Are You Attending?</string>
    <string name="email_invite">Invite by E-Mail</string>
    <string name="username_invite">Invite By Username</string>
    <string name="invite">Invite</string>

</resources>