<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/marriagenda_splash_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/login_image"
        android:src="@drawable/ic_launcher_marriagenda" >
    </ImageView>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:text="@string/username"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="text"
        android:textSize="20sp" >
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="15sp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="20sp" >
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="15"
        android:gravity="center"
        android:text="" >
    </TextView>

</LinearLayout>