<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/marriagenda_splash_bg"
    android:gravity="top|center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:id="@+id/eventcontainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="5dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="14dp"
            android:text="@string/event_desc"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/event_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/event_description"
            android:text="@string/event_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="17dp"
            android:layout_toRightOf="@+id/textView3"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView3"
            android:text="@string/event_address"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/event_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView4"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/textView2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:text="@string/event_city"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/event_city"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_toRightOf="@+id/textView4"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/event_city"
            android:layout_alignBottom="@+id/event_city"
            android:layout_toRightOf="@+id/event_city"
            android:text="@string/event_state"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/event_state"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_toRightOf="@+id/textView5"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/event_state"
            android:layout_alignBottom="@+id/event_state"
            android:layout_toRightOf="@+id/event_state"
            android:text="ZIP"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/event_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView6"
            android:layout_alignBottom="@+id/textView6"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/textView6"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/event_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView4"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/event_place"
            android:text="Directions"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/location_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView7"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/email_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/location_comments"
            android:layout_marginTop="66dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/username_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/email_invite"
            android:layout_marginTop="48dp"
            android:background="@color/white"
            android:ems="10" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/username_invite"
            android:layout_alignLeft="@+id/username_invite"
            android:layout_marginBottom="21dp"
            android:text="@string/username_invite"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/email_invite"
            android:layout_alignLeft="@+id/email_invite"
            android:layout_marginBottom="20dp"
            android:text="@string/email_invite"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/invite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_invite"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:text="@string/invite" />

    </RelativeLayout>

</LinearLayout>